@@ -410,10 +410,7 @@ void MiniTerm::hangup() {
     // Then hangup command
     writeline(gpppdata.modemHangupStr());
     
-    if(gpppdata.FastModemInit())
-      usleep(10000); // 0.01 sec
-    else
-      usleep(1000000); // 1 sec
+    usleep(gpppdata.modemInitDelay() * 10000); // 0.01 - 3.0 sec 
 
     tcsendbreak(modemfd, 0);
 
